--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-
+   
+   /*header*/
     .container{
     width: 85%;
     max-width: 850px;
@@ -30,10 +31,9 @@
     align-items: center;
     }
 
-.header a{
-text-decoration: none;
-
-}
+    .header a{
+    text-decoration: none;
+    }
 
     .navigation ul{
     margin: 0;
@@ -48,306 +48,43 @@ text-decoration: none;
     .navigation ul li a{
     display: block;
     padding: 0.5rem 2rem;
+    border-radius: 5px;
     }
-    border-radius: 5px;
-}
 
-
-.container-lectus{
-    font-family: 'Open Sans'; 
-    margin-left: -30px;
-    font-size: 15px;
-    width: 450px;
-    margin-top: -450px;
-    color:#FFFFFF;
-    position: absolute; 
-    letter-spacing: 0.5px;
-    line-height: 26px;
-}
-
-.img-reun img{
-    width: 51%;
-    margin-left: -1px;
-    margin-top: -698px;
-    position: relative;
-}
-
-
-.img-reunion img{
-    width: 51%;
-    margin-left: 660px;
-    position: relative;
-    
-
-}
-.texto1 p{
-    font-family: 'Montserrat', sans-serif;
-    margin-top: -17em;
-    margin-left: 2.9em;
-    color: #FFFFFF;
-    font-size: 30px;
-    position: absolute;
-    margin-top: 100px;
-    font-family: 'Montserrat', sans-serif;
-    border-radius: 5px;
-
-.container-time{
-    position: relative;
-    width: 30%;
-    height: 234px;
-    left: 50em;
-    top: 12em;
-    
-}
-.container-time p{
-    align-items: center;
+   /*ABOUT US*/
+    .container-two-section{
+    width: 100%;
+    height: 720px;
     display: flex;
-    font-family: Open'Sans';
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 26px;
-    letter-spacing: 0.5px;
-    color: #5D5F65;
-}
-.container-time h2{
-    position: absolute;
-    width: 260px;
-    height: 26px;
-    left: 0px;
-    top: -50px;
-
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 28px;
-    line-height: 26px;
-    letter-spacing: 1px;
-    color: #2B2B2B;
+    align-items: center;
+    margin: 0 auto;
+    }
   
-}
-.container-time-line img{
-   
-    position: relative;
-    width: 15%;
-    height: 490px;
-    left: 20em;
-    top: -14em;
+  .first-section{
+    height: 100%;
+    background: #141720;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+    }
 
-}
-.container-two-section{
-  width: 100%;
-  height: 720px;
-  display: flex;
-  align-items: center;
-  margin: 0 auto;
-}
+  .first-section p{
+    font-family: open sans-serif;
+    font-size: 0.9375rem;
+    color: #FFFFFF;
+    letter-spacing: 0.5px;
+    }
 
-.first-section{
-  height: 100%;
-  background: #141720;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex: 1;
-}
-
-.first-section p{
-  font-family: open sans-serif;
-  font-size: 0.9375rem;
-  color: #FFFFFF;
-  letter-spacing: 0.5px;
-
-}
-
-.second-section{
+  .second-section{
   height: 100%;
   overflow: hidden;
-  flex: 1;
-}
+  flex:1;
+  }
 
-.second-section img{
+  .second-section img{
   object-fit: cover;
   width: 100%;
   height: 100%;
-}
-.linea-tiempo {
-    position: relative;
-    width: 500px;
-    max-width: 50%;
-    height: 100%;
-    font-family:  Montserrat;
-    top: -38.125rem;
-    left: 12.5rem;
-  }
-  .start{
-    position: relative;
-    left: 115px;
-    top: 45px;
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 26px;
-    color: #C71222;
-  }
-  .important p{
-      position: relative;
-      left: 75px;
-      top: -32px;
-      font-family: Montserrat;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 26px;
-    color: #141720;
-  }
-  .date-one{
-    position: relative;
-    left: 110px;
-    top: 45px;
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 26px;
-    color: #D4D4D4;
-  }
-  .one-line p{
-    position: relative;
-    left: 80px;
-    top: -28px;
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 26px;
-    color: #141720;
-  }
-  .date-two{
-    position: relative;
-    left: 115px;
-    top: 78px;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 26px;
-    color: #D4D4D4;
-  }
-.descripcion-two p{
-    position: relative;
-    left: 70px;
-    top: -30px;
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 26px;
-    color: #141720;
-
-.timeline{
-    font-weight: normal;
-   position: absolute;
-    width: 451px;
-    right: 14em;
-     max width: 700px;
-}
-  
-    .container-two-section{
-        width: 100%;
-        height: 720px;
-        display: flex;
-        align-items: center;
-        margin: 0 auto;
-    
- }
-    
-    .first-section{
-        height: 100%;
-        background: #141720;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex: 1;
-  }
-    
-    .first-section p{
-        font-family: open sans-serif;
-        font-size: 0.9375rem;
-        color: #FFFFFF;
-        letter-spacing: 0.5px;
-       
   }
 
-    .second-section{
-        height: 100%;
-        overflow: hidden;
-        flex: 1;
-  }
-
-    .second-section img{
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
-}
-    
-.current{
-    position: relative;
-    left: 115px;
-    top: 165px;
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 26px;
-    color: #D4D4D4;
-}  
-.finish p{
-    position: relative;
-    
-    left: 75px;
-    top: -30px;
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 26px;
-    color: #141720;
-}  
-  
-
-  .momento h6 {
-    margin: 30px ;
-    font-size: 11px;
-    text-align: center;
-    
-
-    
-  }
- .descripcion {
-    border-radius: 10px;
-    padding: 10px;
-    line-height: 22px;
-    font-size: 14px;
-    left: 100px;
-    
-  }
-  
-.container-third-segment li{
-    display: inline-block;
-    column-count:2;
-    list-style: none;
-    width: 400px;
-    height: 759px;
-    left: 152px;
-    top: 0px;
-}
-.third-part p{
-    font-family: Open Sans;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 15px;
-    line-height: 15px;
-    color: #5D5F65;
-
-}
