--- a/css/style.css
+++ b/css/style.css
@@ -88,3 +88,39 @@
   height: 100%;
   }
 
+ /*we-harring*/
+ .container-tree-section{
+  width: 100%;
+  height: 720px;
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.hiring{
+  height: 100%;
+  background: #141720;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
+
+.hiring p{
+font-family: open sans-serif;
+font-size: 0.9375rem;
+color: #FFFFFF;
+letter-spacing: 0.5px;
+}
+
+.four-section{
+height: 100%;
+overflow: hidden;
+flex:1;
+}
+
+.four-section img{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  }
