--- a/css/style.css
+++ b/css/style.css
@@ -70,10 +70,17 @@
     }
 
   .first-section p{
-    font-family: open sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-size: 0.9375rem;
     color: #FFFFFF;
     letter-spacing: 0.5px;
+    padding-top: 1em;
+    }
+
+    .first-section h1{
+      font-family: 'Open Sans', sans-serif;
+      color: #FFFFFF;
+      letter-spacing: 0.5px;
     }
 
   .second-section{
@@ -107,8 +114,15 @@
 }
 
 .hiring p{
-font-family: open sans-serif;
+font-family: 'Open Sans', sans-serif;
 font-size: 0.9375rem;
+color: #FFFFFF;
+letter-spacing: 0.5px;
+padding-top: 1em;
+}
+
+.hiring h1{
+font-family: 'Open Sans', sans-serif;
 color: #FFFFFF;
 letter-spacing: 0.5px;
 }
@@ -124,3 +138,47 @@ flex:1;
   width: 100%;
   height: 100%;
   }
+
+  .container-final{
+  object-fit: fill;
+  width: 100%;
+  height: 100%;
+  }
+
+ /*Contact us*/
+.container-five-section{
+  width: 100%;
+  height: 720px;
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.final-section{
+  height: 100%;
+  background: #141720;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
+
+.imagen-section{
+  height: 100%;
+  overflow: hidden;
+  flex:1;
+}
+
+.imagen-section img{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.final-section p{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 28px;
+  color: #FFFFFF;
+  letter-spacing: 0.5px;
+}
+
