--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,11 @@
     .container{
     width: 85%;
     max-width: 850px;
-    margin: 0 auto;
+    margin:  auto;
     }
 
     .header{
-    padding: 2rem 0;
+    padding: 2rem ;
     }
 
     .welcome{
@@ -48,7 +48,7 @@
     .navigation ul li a{
     display: block;
     padding: 0.5rem 2rem;
-    border-radius: 5px;
+    border-radius:0 5px;
     }
 
    /*ABOUT US*/
@@ -152,6 +152,7 @@ flex:1;
   display: flex;
   align-items: center;
   margin: 0 auto;
+
 }
 
 .final-section{
@@ -161,6 +162,7 @@ flex:1;
   align-items: center;
   justify-content: center;
   flex: 1;
+  
 }
 
 .imagen-section{
@@ -187,3 +189,95 @@ label{
   display: block;
   width: 100%;
 }
+
+form{
+    text-decoration: none;
+}
+
+/*linea del tiempo*/
+.container-list{
+  width: 100%;
+  background: #EFEFEF;
+  margin:auto;
+  padding: 200px;
+  font-size: 25px;
+  flex: 1;
+  letter-spacing: 0.5px;
+  overflow: hidden;
+  line-height: 40px;
+ 
+}
+
+.gallery{
+padding-top: 6em;
+}
+ /*formulario*/
+ .form-container{
+  margin-top: 3em;
+  display: grid;
+  gap: 2.5em;
+}
+
+.form-group{
+  position: relative;
+  --color:#FFFFFF;
+}
+
+.form-input{
+  width: 100%;
+  background: none;
+  color: #FFFFFF;
+  font-size: 1rem;
+  padding: .6em  .3em;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid var(--color);
+  font-family: 'Open Sans', sans-serif;
+}
+
+.form-input:focus + .form-label,
+.form-input:not(:placeholder-shown) + .form-label{
+  transform: translateY(-12px) scale(.7)
+}
+
+.form-input:focus + .form-label,
+.form-input:not(:placeholder-shown) + .form-label{
+  transform-origin: left top;
+  color: #3866f2;
+}
+
+.form-submit{
+  align-items: center;
+  background: #C71222;
+  color: #FFFFFF;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 100;
+  font-size: 1rem;
+  padding: 1em 1.5em;
+  border: none;
+  border-radius: 1em;
+}
+
+.form-label{
+  color: var(--color);
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 5px;
+  transform: translateY(10px);
+  transition: transform .5s, color .3s;
+}
+
+.container-list{
+  width: 100%;
+  background: #EFEFEF;
+  margin:auto;
+  padding: 200px;
+  font-size: 25px;
+  flex: 1;
+  letter-spacing: 0.5px;
+  overflow: hidden;
+  line-height: 40px;
+ 
+}
+
