--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-   
+@media screen {
+  
    /*header*/
     .container{
     width: 85%;
@@ -209,8 +210,9 @@ form{
 }
 
 .gallery{
-padding-top: 6em;
+padding-top: 3em;
 }
+
  /*formulario*/
  .form-container{
   margin-top: 3em;
@@ -256,6 +258,8 @@ padding-top: 6em;
   padding: 1em 1.5em;
   border: none;
   border-radius: 1em;
+  padding: 10px;
+ 
 }
 
 .form-label{
@@ -280,4 +284,111 @@ padding-top: 6em;
   line-height: 40px;
  
 }
+.linea-tiempo {
+  position: relative;
+  width: 500px;
+  max-width: 95vw;
+  height: 100%;
+  font-family: Arial;
+}
+.momento {
+  position: relative;
+  width: 45%;
+  box-sizing: border-box;
+}
+.momento:nth-child(even) {
+  left: 55%;
+ }
+ .linea-tiempo::before {
+  content: '';
+  position: absolute;
+  width: 3px;
+  background-color: #000;
+  left: 50%;
+  height: 100%;
+  border-radius: 10px;
+}
+.momento::after {
+  content: '';
+  position: absolute;
+  top: calc(50% + 10px);
+  right: calc(-11.11% - 11.5px);
+  height: 20px;
+  width: 20px;
+  background-color: #000;
+  border-radius: 50%;
+}
+.momento:nth-child(even)::after {
+  left: calc(-11.11% - 8.5px);
+}
+.momento h3 {
+  margin: 10px 0px;
+  font-size: 30px;
+  text-align: center;
+}
+.momento .descripcion {
+  background-color: #eee;
+  border-radius: 10px;
+  padding: 10px;
+  line-height: 22px;
+  font-size: 14px;
+}
+.momento .descripcion::after {
+  content: '';
+  position: absolute;
+  right: -10px;
+  top: calc(50% + 10px);
+  height: 0;
+  width: 0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-left: 12px solid #eee;
+}
 
+.momento:nth-child(even) .descripcion::after{
+  left: -10px;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+
+  border-left: none;
+}
+
+
+
+
+.container-time2{
+    position: relative;
+    width: 30%;
+    height: 234px;
+    left: 50em;
+    top: -34.375rem;
+    padding-top: 18em;
+
+}
+  .container-time2 p{
+    align-items: center;
+    display: flex;
+    font-family: Open'Sans';
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 26px;
+    letter-spacing: 0.5px;
+    color: #5D5F65;
+
+  }
+  .container-time h2{
+    position: absolute;
+    width: 260px;
+    height: 26px;
+    left: 0px;
+    top: -50px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 26px;
+    letter-spacing: 1px;
+    color: #2B2B2B;
+     }
+}
